--- a/style2.css
+++ b/style2.css
@@ -101,8 +101,11 @@ ul li{
 
 .textoBanner h2 {
     font-size: 1.2rem;
-    color: #3C2313;
+    background-color: #3C2313;
+    color: #fff;
     margin: 1rem 0;
+    padding: 0.6rem;
+    border-radius: 5px;
 }
 
 .textoBanner a {
@@ -238,7 +241,7 @@ ul li{
 }
 
 .suscripcion form input[type="email"] {
-    width: 300px;
+    width: 250px;
     background-color: white;
     border-radius: 20px;
     padding: 1rem;
@@ -252,10 +255,9 @@ ul li{
     background-color: #3C2313;
     color: white;
     border-radius: 25px;
-    padding: 0.8rem;
+    padding: 0.7rem;
     border: none;
     margin: 0.4rem;
-    font-weight: 500;
     font-weight: 700;
 }
 
@@ -272,6 +274,8 @@ ul li{
     display: flex;
     justify-content: space-around;
     background-color: #3C2313;
+    flex-direction: column-reverse;
+    padding-top: 1.5rem;
 }
 
 .subcontacto {
@@ -290,9 +294,6 @@ ul li{
     color: white;
     text-align: center;
 }
-
-
-
 
 
 @media screen and (min-width: 1024px) {
@@ -333,6 +334,10 @@ ul li{
         flex-direction: row;
         justify-content: space-between;
         padding: 1rem 1.5rem;
+    }
+
+    .contacto {
+        flex-direction: rox;
     }
 
 }
